# models/user.go
@@ -3,6 +3,7 @@ package models
 import (
 	"fmt"
 	"strconv"
+	"time"
 
 	"github.com/astaxie/beego/orm"
 )
@@ -13,9 +14,11 @@ func init() {
 
 // User 用户信息
 type User struct {
-	Id       int         `orm:"auto"`
-	UserName string      `orm:"unique" description:"用户名"`
-	Email    string      `orm:"null;unique" description:"电子邮箱"`
+	Id            int       `orm:"auto"`
+	UserName      string    `orm:"unique" description:"用户名"`
+	Email         string    `orm:"null;unique" description:"电子邮箱"`
+	Password      string    `description:"密码"`
+	LastLoginTime time.Time `orm:"null;type(datetime)" description:"最后一次登录时间"`
 	Times
 }
 
