# swagger/swagger.json
@@ -218,7 +218,10 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "{string} login success"
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/utils.Response"
+                        }
                     },
                     "403": {
                         "description": "user not exist"
@@ -331,6 +334,10 @@
         }
     },
     "definitions": {
+        "112.0xc000328bd0.false": {
+            "title": "false",
+            "type": "object"
+        },
         "models.Object": {
             "title": "Object",
             "type": "object",
@@ -380,6 +387,15 @@
                     "type": "integer",
                     "format": "int64"
                 },
+                "LastLoginTime": {
+                    "description": "最后一次登录时间",
+                    "type": "string",
+                    "format": "datetime"
+                },
+                "Password": {
+                    "description": "密码",
+                    "type": "string"
+                },
                 "Updated": {
                     "description": "最后一次更新时间",
                     "type": "string",
@@ -388,6 +404,22 @@
                 "UserName": {
                     "description": "用户名",
                     "type": "string"
+                }
+            }
+        },
+        "utils.Response": {
+            "title": "Response",
+            "type": "object",
+            "properties": {
+                "body": {
+                    "$ref": "#/definitions/112.0xc000328bd0.false"
+                },
+                "msg": {
+                    "type": "string"
+                },
+                "scode": {
+                    "type": "integer",
+                    "format": "int64"
                 }
             }
         }
